    - Dis & re connect the single/duo when rotating
    - Switch deathrattle to position based lookup
    - Delete the struct of removed pipe to grounds
    - Decrease the selection box of the directional heatpipe
    - Each struct only sets its own mode
    - Fix replacing/upgrading colliding with the old struct
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2024. 11. 22
  Info:
    - Revert 06e0299, connecting shall replace both end caps
    - Get rid of the single/duo
    - Figure out how to connect the textures without going through hell
    - Apparently heat pipes are 1-1, even though they will still try to connect
    - Revert the last 4 commits
    - Detect when something with heat pipes gets placed over an underpass
    - Initial test or refreshing the entities after something gets placed in between
    - Create a new underpass struct when bringing them to front
    - Setup surfacedata
    - Flush brain buffer
    - Try to write a custom iterator
    - Begin transition from struct to surfacedata (since entities switch unit numbers a lot)
    - Attempt to fix the rotation handler
    - Hmm this causes an infinite loop too
    - Fix the infinite loop
    - Prevent identical overpasses from stacking
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2024. 11. 22
  Info:
    - Begin giving disconnected undergrounds a heat pipe
    - Draw the disconnected sprite in its default state
    - Remove the directional heat pipe upon pipe to ground removal
    - Well rip, normal heat pipes are still visually connecting
    - Prevent connections in unauthorized directions
    - Allow the underground heat pipe to be rotated
    - Same pipe prototypes always visually connect, checkerboard alternate them
    - Preserve heat when rotating
    - Fast rotate does not preserve temperature