@@ -13,6 +13,7 @@ Date: ????
     - Decrease the selection box of the directional heatpipe
     - Each struct only sets its own mode
     - Fix replacing/upgrading colliding with the old struct
+    - Fix deathrattles on a surface being deleted
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.5
 Date: 2024. 11. 22
